[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = "Offline evaluation of ranking models"
authors = ["Zalando Ireland Ltd. <team-express@zalando.ie>"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
numpy = "^1.22"
pandas = "^1.3.5"
pyspark = "^3.1.3"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
black = "^22.3.0"
flake8 = "^3.9.2"
pylint = "^2.8.3"
mypy = "^0.902"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
